tests/e2e/snapshots/test__e2e__online__moonup_install_nightly_2.snap
---
source: tests/e2e/online.rs
info:
  program: moonup
  args:
    - install
    - nightly-2026-01-31
---
success: true
exit_code: 0
----- stdout -----
Installing toolchain 'nightly-2026-01-31'
✔ Installed toolchain version 'nightly-2026-01-31'
Make sure '[MOON_HOME]/bin' is added to your PATH

----- stderr -----
Finished. moon: ran 66 tasks, now up to date
Finished. moon: ran 66 tasks, now up to date
Finished. moon: ran 66 tasks, now up to date
Finished. moon: ran 66 tasks, now up to date
Finished. moon: no work to do
