tests/e2e/snapshots/test__e2e__online__moonup_list_3.snap
---
source: tests/e2e/online.rs
info:
  program: moonup
  args:
    - list
---
success: true
exit_code: 0
----- stdout -----
Moonup home: [MOONUP_HOME]

No toolchains installed

----- stderr -----
