tests/e2e/snapshots/test__e2e__online__moonup_pin.snap
---
source: tests/e2e/online.rs
info:
  program: moonup
  args:
    - pin
    - 0.1.20241231+ba15a9a4e
---
success: true
exit_code: 0
----- stdout -----
✔ Pinned toolchain to version '0.1.20241231+ba15a9a4e'
Toolchain file: [TEMP_FILE]

----- stderr -----
