tests/e2e/snapshots/test__e2e__online__moonup_selfupdate_forced.snap
---
source: tests/e2e/online.rs
info:
  program: moonup
  args:
    - self-update
---
success: true
exit_code: 0
----- stdout -----
Updating moonup: [MOONUP_VERSION] -> [MOONUP_VERSION]

----- stderr -----
