tests/e2e/snapshots/test__e2e__online__moonup_uninstall_clear.snap
---
source: tests/e2e/online.rs
info:
  program: moonup
  args:
    - uninstall
    - "--clear"
---
success: true
exit_code: 0
----- stdout -----
✔  Cleared all cached downloads

----- stderr -----
